--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Geoff Nix</a>
+            <a class="navbar-brand" id="name" href="#">Geoff Nix</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -32,7 +32,7 @@
 
           <div class="container">
               <div class="row">
-                  <div class="col-med-6">
+                  <div class="col-md-6"> <h1 class="contact-header">Contacts</h1>
                     <form>
                         <div class="form-group">
                             <label for="exampleInputEmail1">Email address</label>
