--- a/contact.html
+++ b/contact.html
@@ -32,13 +32,17 @@
 
           <div class="container">
               <div class="row">
-                  <div class="col-md-6"> <h1 class="contact-header">Contacts</h1>
+                  <div class="form-group col-md-6">
+                  <div class="col-md-6"> <h1 class="contact-header">Contact</h1>
+                  </div>
                     <form>
-                       
                         <div class="form-group">
-                            <label for="exampleInputEmail1">Email address</label>
+                            <label for="exampleInputEmail1">Name</label>
+                            <input type="name" class="form-control" id="exampleInputName" >
+                          </div>
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Email</label>
                             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                           </div>
                     </form>
                   </div>
