--- a/contact.html
+++ b/contact.html
@@ -46,8 +46,11 @@
                         <label for="exampleInputEmail1">Email</label>
                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
                       </div>
+                      <div class="form-group">
+                        <label for="message">Message:</label>
+                        <textarea class="form-control" rows="5" id="message"></textarea>
+                      </div> 
                 </form>
-              
               </div>
           </div>
 
