--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,9 @@
                         <label for="message">Message:</label>
                         <textarea class="form-control" rows="5" id="message"></textarea>
                       </div> 
+                      <div class="form-group">
+                        <button class="btn btn-primary" type="submit">Submit</button>
+                      </div>
                 </form>
               </div>
           </div>
