--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
               <form class="form-group"> <h1 class="contact-header">Contact</h1>
               </form>
               
-                <form class="form-group">
+                <form class="form-group" id="input-info">
                     <div class="form-group">
                         <label for="exampleInputEmail1">Name</label>
                         <input type="name" class="form-control" id="exampleInputName" placeholder="Name" >
@@ -51,7 +51,7 @@
                         <textarea class="form-control" rows="5" id="message"></textarea>
                       </div> 
                       <div class="form-group">
-                        <button class="btn btn-primary" type="submit">Submit</button>
+                        <button class="btn btn-primary btn-lg" type="submit">Submit</button>
                       </div>
                 </form>
               </div>
