added pic to index page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <div class="row">
                   <div class="col-md-8">
                       <h1>About Me</h1>
-
+                    <img src="self.jpeg" alt="Geoff Nix Pic">
                   </div>
               </div>
               <section class="bio-box" ></section>
