added lorem text to wrap around image

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                   <div class="col-md-8">
                       <h1>About Me</h1>
                     <img src="self.jpeg" alt="Geoff Nix Pic">
+                    <p>Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, repellat ratione quas expedita ipsam nisi inventore ea officia, exercitationem corporis reprehenderit reiciendis Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat veniam vero, blanditiis cupiditate et cumque illo aliquam exercitationem dolores harum ipsum optio sit nam. Numquam quia excepturi illo inventore hic. consequuntur iure dolorem voluptas, maiores nobis explicabo. Eveniet? ipsum dolor sit amet consectetur adipisicing elit. Deleniti voluptates id explicabo mollitia perferendis, quisquam quos sint voluptatem voluptate iure velit accusantium? Ut, adipisci quisquam libero laboriosam quam maiores? Quis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum facilis laborum doloribus quibusdam, minus nesciunt asperiores! Quisquam quam, pariatur debitis, dolorum temporibus dolore laborum magnam reiciendis porro a sed aliquam.</p>
                   </div>
               </div>
               <section class="bio-box" ></section>
