--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
                         <label for="message">Message:</label>
                         <textarea class="form-control" rows="5" id="message"></textarea>
                       </div> 
-                      <div class="form-group" id="submit-btn">
+                      <div class="form-group" >
                         <button class="btn btn-primary btn-lg" type="submit">Submit</button>
                       </div>
                 </form>
