--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           </nav>
 
           <div class="container">
+            <div class="row" id="spacer"></div>
               <div class="row">
                   <div class="col-md-7">
                       <h1>About Me</h1>
