--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,7 @@
       </nav>
 
       <div class="container">
+        <div class="row" id="spacer-1"></div>
           <div class="row">
               <div class="col-md-6">
               <form class="form-group"> <h1 class="contact-header">Contact</h1>
