--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
               <a class="nav-link" href="#">Contacts<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Index</a>
+              <a class="nav-link" href="https://fsgeoff.github.io/bootstrap-portfolio/">Index</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Portfolio</a>
