--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                   <a class="nav-link" href="#">Index</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Portfolio</a>
+                  <a class="nav-link" href="https://fsgeoff.github.io/bootstrap-portfolio/portfolio">Portfolio</a>
                 </li>
               </ul>
             </div>
