--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
                   <a class="nav-link" href="https://fsgeoff.github.io/bootstrap-portfolio/">Index</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Portfolio</a>
+                  <a class="nav-link" href="https://fsgeoff.github.io/bootstrap-portfolio/portfolio">Portfolio</a>
                 </li>
               </ul>
             </div>
