--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Contacts<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="https://fsgeoff.github.io/bootstrap-portfolio/contact">Contacts<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://fsgeoff.github.io/bootstrap-portfolio/">Index</a>
