--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                   <a class="nav-link" href="file:///Users/mymac/gt-pt/homework/bootstrap-portfolio/contact.html">Contacts<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Index</a>
+                  <a class="nav-link" href="https://fsgeoff.github.io/bootstrap-portfolio/#">Index</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="https://fsgeoff.github.io/bootstrap-portfolio/portfolio">Portfolio</a>
