--- a/contact.html
+++ b/contact.html
@@ -12,17 +12,17 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" id="name" href="#">Geoff Nix</a>
+        <a class="navbar-brand" id="name" href="https://fsgeoff.github.io/bootstrap-portfolio/">Geoff Nix</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="https://fsgeoff.github.io/bootstrap-portfolio/contact">Contacts<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="https://fsgeoff.github.io/bootstrap-portfolio/contact">Contact<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://fsgeoff.github.io/bootstrap-portfolio/">Index</a>
+              <a class="nav-link" href="https://fsgeoff.github.io/bootstrap-portfolio/#">Index</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://fsgeoff.github.io/bootstrap-portfolio/portfolio">Portfolio</a>
