--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="file:///Users/mymac/gt-pt/homework/bootstrap-portfolio/contact.html">Contact<span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="https://fsgeoff.github.io/bootstrap-portfolio/contact">Contact<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="https://fsgeoff.github.io/bootstrap-portfolio/#">Index</a>
