--- a/portfolio.html
+++ b/portfolio.html
@@ -32,9 +32,13 @@
           <div class="container">
             <div class="row" id="spacer-1"></div>
             <div class="row">
-              <div class="col-md-7">
+              <div class="col-md-9">
                 <form class="form-group"> <h1 class="contact-header">Portfolio</h1>
                 </form>
+                <form class="form-group">
+                <img src="self.jpeg" alt="portfolio image" class="port-img">
+                <img src="self.jpeg" alt="portfolio image" class="port-img">
+              </form>
               </div>
               
 
