added 2nd and 3rd row of images

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,6 +39,13 @@
                 <img src="self.jpeg" alt="portfolio image" class="port-img">
                 <img src="self.jpeg" alt="portfolio image" class="port-img">
               </form>
+              <form class="form-group">
+                <img src="self.jpeg" alt="portfolio image" class="port-img">
+                <img src="self.jpeg" alt="portfolio image" class="port-img">
+              </form>
+              <form class="form-group">
+                <img src="self.jpeg" alt="portfolio image" class="port-img">
+              </form>
               </div>
               
 
