addded padding around the image in 'Index'

--- a/index.html
+++ b/index.html
@@ -35,9 +35,16 @@
               <div class="row">
                   <div class="col-md-7">
                       <h1>About Me</h1>
-                    <img src="self.jpeg" alt="Geoff Nix Pic">
-                    <p>Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, repellat ratione quas expedita ipsam nisi inventore ea officia, exercitationem corporis reprehenderit reiciendis Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat veniam vero, blanditiis cupiditate et cumque illo aliquam exercitationem dolores harum ipsum optio sit nam. Numquam quia excepturi illo inventore hic. consequuntur iure dolorem voluptas, maiores nobis explicabo. Eveniet? ipsum dolor sit amet consectetur adipisicing elit. Deleniti voluptates id explicabo mollitia perferendis, quisquam quos sint voluptatem voluptate iure velit accusantium? Ut, adipisci quisquam libero laboriosam quam maiores? Quis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum facilis laborum doloribus quibusdam, minus nesciunt asperiores! Quisquam quam, pariatur debitis, dolorum temporibus dolore laborum magnam reiciendis porro a sed aliquam.</p>
-                  </div>
+                    <img src="self.jpeg" alt="Geoff Nix Pic" class="index-pic">
+                    <div class="text-wrap"><p>Hello World! I’m originally from Brooklyn, New York but I have been in ATL sine 1995. I am a proud father of 4 that loves sports, working out, and…of course…CODING!
+
+                      I am coming from a totally non-technical background. I have worked as a Licensed Master Barber fo 25+ years. I must admit, I struggled quite a bit(still do at times), but I kept at it and I’m grateful to be in Ga Tech Coding BootCamp. 
+                      
+                      I’m currently working as a Salesforce BA for a partner company. I currently hold 6 Salesforce certifications. <strong> Platform App Builder, Platform Developer 1, Email Marketing Specialist, Email Marketing Consultant</strong>, and <strong>B2B Commerce Admin</strong>. I’m proud of the accomplishments and it was a good introduction into the IT industry. However, I want to be a developer. 
+                      
+                      I believe I’m on the right track and I’m exited about what lies ahead!</p>
+                    </div>
+                    </div>
               </div>
               <section class="bio-box" ></section>
           </div>
