added images, images folder to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,15 +36,15 @@
                 <form class="form-group"> <h1 class="contact-header">Portfolio</h1>
                 </form>
                 <form class="form-group">
-                <img src="self.jpeg" alt="portfolio image" class="port-img">
-                <img src="self.jpeg" alt="portfolio image" class="port-img">
+                <img src="images/baby.jpeg" alt="Baby Pic" class="port-img">
+                <img src="images/wcc.jpeg" alt="Selfie at WCC" class="port-img">
               </form>
               <form class="form-group">
-                <img src="self.jpeg" alt="portfolio image" class="port-img">
-                <img src="self.jpeg" alt="portfolio image" class="port-img">
+                <img src="images/chops.jpeg" alt="Pork-chop sideburns pic" class="port-img">
+                <img src="images/hawaii.jpeg" alt="Hawaii pic" class="port-img">
               </form>
               <form class="form-group">
-                <img src="self.jpeg" alt="portfolio image" class="port-img">
+                <img src="images/blk-n-wht.jpeg" alt="Black/White selfie" class="port-img">
               </form>
               </div>
               
