changed pic in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
                 <img src="images/hawaii.jpeg" alt="Hawaii pic" class="port-img">
               </form>
               <form class="form-group">
-                <img src="images/blk-n-wht.jpeg" alt="Black/White selfie" class="port-img">
+                <img src="images/construction.jpeg" alt="Black/White selfie" class="port-img">
               </form>
               </div>
               
