added pic of kids

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,6 +48,7 @@
               </form>
               <form class="form-group">
                 <img src="images/construction.jpeg" alt="Black/White selfie" class="port-img">
+                <img src="images/kids.jpeg" alt="Black/White selfie" class="port-img">
               </form>
               </div>
               
