added image response to all portfolio images,chnged img claas to id in css

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,16 +39,16 @@
                 <form class="form-group"> <h1 class="contact-header">Portfolio</h1>
                 </form>
                 <form class="form-group">
-                <img src="images/baby.jpeg" alt="Baby Pic" class="port-img">
-                <img src="images/wcc.jpeg" alt="Selfie at WCC" class="port-img">
+                <img src="images/baby.jpeg" alt="Baby Pic" class="img-responsive" id="port-img">
+                <img src="images/wcc.jpeg" alt="Selfie at WCC" class="img-responsive" id="port-img">
               </form>
               <form class="form-group">
-                <img src="images/chops.jpeg" alt="Pork-chop sideburns pic" class="port-img">
-                <img src="images/hawaii.jpeg" alt="Hawaii pic" class="port-img">
+                <img src="images/chops.jpeg" alt="Pork-chop sideburns pic" class="img-responsive" id="port-img">
+                <img src="images/hawaii.jpeg" alt="Hawaii pic" class="img-responsive" id="port-img">
               </form>
               <form class="form-group">
-                <img src="images/construction.jpeg" alt="Black/White selfie" class="port-img">
-                <img src="images/kids.jpeg" alt="Black/White selfie" class="port-img">
+                <img src="images/construction.jpeg" alt="Black/White selfie" class="img-responsive" id="port-img">
+                <img src="images/kids.jpeg" alt="Black/White selfie" class="img-responsive" id="port-img">
               </form>
               </div>
               
