made about me image responsive

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                   <div class="col-md-7">
                       
                       <h1>About Me</h1>
-                    <img src="images/self.jpeg" alt="Geoff Nix Pic" class="index-pic">
+                    <img src="images/self.jpeg" alt="Geoff Nix Pic" class="img-responsive" id="index-pic">
                     <div class="text-wrap"><p>Hello World! I’m originally from Brooklyn, New York but I have been in ATL sine 1995. I am a proud father of 4 that loves sports, working out, and…of course…CODING!
 
                       I am coming from a totally non-technical background. I have worked as a Licensed Master Barber fo 25+ years. I must admit, I struggled quite a bit(still do at times), but I kept at it and I’m grateful to be in Ga Tech Coding BootCamp. 
