--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+  <!-- Navbar with 'Contacts' 'Index' and 'Portfolio' options -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" id="name" href="https://fsgeoff.github.io/bootstrap-portfolio/">Geoff Nix</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,24 +40,29 @@
         <div class="row" id="spacer"></div>
           <div class="row">
               <div class="col-md-6">
+                <!-- Header to the Contact Form  -->
               <form class="form-group"> <h1 class="contact-header">Contact</h1>
                 <hr>
               </form>
               
                 <form class="form-group" id="input-info">
                     <div class="form-group">
+                      <!-- Input Box -->
                         <label for="exampleInputEmail1">Name</label>
                         <input type="name" class="form-control" id="exampleInputName" placeholder="Name" >
                       </div>
                     <div class="form-group">
+                      <!-- Input Box -->
                         <label for="exampleInputEmail1">Email</label>
                         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
                       </div>
                       <div class="form-group">
+                        <!-- Input Box -->
                         <label for="message">Message:</label>
                         <textarea class="form-control" rows="5" id="message"></textarea>
                       </div> 
                       <div class="form-group" >
+                        <!-- Submit Button  -->
                         <button class="btn btn-primary btn-lg" type="submit">Submit</button>
                       </div>
                 </form>
@@ -64,6 +71,7 @@
 
       </div>
       <div class="row" id="spacer"></div>
+      <!-- Sticky Footer  -->
   <div class="fixed-bottom" id="footer"></div>     
 </body>
 </html>
