--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,7 @@
         <div class="row" id="spacer"></div>
           <div class="row">
               <div class="col-md-6">
+                <section class="cnt-form">
                 <!-- Header to the Contact Form  -->
               <form class="form-group"> <h1 class="contact-header">Contact</h1>
                 <hr>
@@ -66,12 +67,14 @@
                         <button class="btn btn-primary btn-lg" type="submit">Submit</button>
                       </div>
                 </form>
+              </section>
               </div>
           </div>
-
       </div>
       <div class="row" id="spacer"></div>
       <!-- Sticky Footer  -->
-  <div class="fixed-bottom" id="footer"></div>     
+      <footer>
+  <div class="fixed-bottom" id="footer"></div> 
+      </footer>    
 </body>
 </html>
