finished look of Portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,21 +36,23 @@
             <div class="row" id="spacer-1"></div>
             <div class="row">
               <div class="col-md-9">
+                <section class="pic-box">
                 <form class="form-group"> <h1 class="contact-header">Portfolio</h1>
                   <hr>
                 </form>
-                <form class="form-group">
+                <form class="form-group" id="nix-pics">
                 <img src="images/baby.jpeg" alt="Baby Pic" class="img-responsive" id="port-img">
                 <img src="images/wcc.jpeg" alt="Selfie at WCC" class="img-responsive" id="port-img">
               </form>
-              <form class="form-group">
+              <form class="form-group" id="nix-pics">
                 <img src="images/chops.jpeg" alt="Pork-chop sideburns pic" class="img-responsive" id="port-img">
                 <img src="images/hawaii.jpeg" alt="Hawaii pic" class="img-responsive" id="port-img">
               </form>
-              <form class="form-group">
+              <form class="form-group" id="nix-pics">
                 <img src="images/construction.jpeg" alt="Black/White selfie" class="img-responsive" id="port-img">
                 <img src="images/kids.jpeg" alt="Black/White selfie" class="img-responsive" id="port-img">
               </form>
+            </section>
               </div>
               
 
@@ -58,6 +60,9 @@
           </div>
         
           <div class="row" id="spacer"></div>
-  <div class="fixed-bottom" id="footer"></div> 
+          <footer>
+  <div class="fixed-bottom" id="footer">
+    <p class="ftr-txt">Ga Tech Coding BootCamp Homework2</p> </div> 
+          </footer>
     </body>
 </html>
