added to footer

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
     </div>
   </section>
   <div class="row" id="spacer"></div>
-  <div class="fixed-bottom" id="footer"></div>
+  <div class="fixed-bottom" id="footer">
+    <p class="ftr-txt">Ga Tech Coding BootCamp Homework2</p> 
+  </div></div>
 
 
 </body>
