--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,9 @@
       <div class="row" id="spacer"></div>
       <!-- Sticky Footer  -->
       <footer>
-  <div class="fixed-bottom" id="footer"></div> 
+  <div class="fixed-bottom" id="footer">
+    <p class="ftr-txt">Ga Tech Coding BootCamp Homework2</p>
+  </div> 
       </footer>    
 </body>
 </html>
