synced CSS to Index.html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </head>
 
 <body>
+  <!-- Navbar with 'Contacts' 'Index' and 'Portfolio' options -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" id="self" href="https://fsgeoff.github.io/bootstrap-portfolio/">Geoff Nix</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -46,12 +47,15 @@
     <div class="container">
       <div class="row" id="spacer"></div>
       <div class="row">
-        <div class="col-md-7">
+        <div class="col-md-6">
           <section class="bio-box">
+            <!-- Header  -->
             <h1>About Me</h1>
             <hr>
+            <!-- Image of self  -->
             <img src="images/self.jpeg" alt="Geoff Nix Pic" class="img-responsive" id="index-pic">
             <div class="text-wrap">
+              <!-- Bio Text  -->
               <p>Hello World! I’m originally from Brooklyn, New York but I have been in ATL sine 1995. I am a proud
                 father of 4 that loves sports, working out, and…of course…CODING!
 
@@ -75,9 +79,11 @@
     </div>
   </section>
   <div class="row" id="spacer"></div>
+  <!-- Sticky Footer  -->
+  <footer>
   <div class="fixed-bottom" id="footer">
     <p class="ftr-txt">Ga Tech Coding BootCamp Homework2</p> 
-  </div></div>
+  </footer>
 
 
 </body>
