--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="pstyles.css">
       </head>
     <body>
+      <!-- Navbar with 'Contacts' 'Index' and 'Portfolio' options -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand"  id="self" href="https://fsgeoff.github.io/bootstrap-portfolio/">Geoff Nix</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,9 +34,11 @@
             </div>
           </nav>
           <div class="container">
+            <!-- Space between navbar and Header  -->
             <div class="row" id="spacer-1"></div>
             <div class="row">
-              <div class="col-md-9">
+              <div class="col-md-8">
+                <!-- Section containing all photos -->
                 <section class="pic-box">
                 <form class="form-group"> <h1 class="contact-header">Portfolio</h1>
                   <hr>
@@ -58,8 +61,10 @@
 
             </div>
           </div>
-        
+        <!-- Space between content and footer  -->
           <div class="row" id="spacer"></div>
+
+          <!-- Sticky Footer  -->
           <footer>
   <div class="fixed-bottom" id="footer">
     <p class="ftr-txt">Ga Tech Coding BootCamp Homework2</p> </div> 
