made index page column more narrow,changed col from md to sm

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Index Portfolio Page</title>
+  <title>Index Page</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -47,7 +47,7 @@
     <div class="container">
       <div class="row" id="spacer"></div>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-sm-4">
           <section class="bio-box">
             <!-- Header  -->
             <h1>About Me</h1>
@@ -56,6 +56,7 @@
             <img src="images/self.jpeg" alt="Geoff Nix Pic" class="img-responsive" id="index-pic">
             <div class="text-wrap">
               <!-- Bio Text  -->
+              <article class="self-bio">
               <p>Hello World! I’m originally from Brooklyn, New York but I have been in ATL sine 1995. I am a proud
                 father of 4 that loves sports, working out, and…of course…CODING!
 
@@ -69,6 +70,7 @@
                 accomplishments and it was a good introduction into the IT industry. However, I want to be a developer.
 
                 I believe I’m on the right track and I’m exited about what lies ahead!</p>
+              </article>
             </div>
           </section>
         </div>
