--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
               <p>Hello World! I’m originally from Brooklyn, New York but I have been in ATL sine 1995. I am a proud
                 father of 4 that loves sports, working out, and…of course…CODING!
 
-                I am coming from a totally non-technical background. I have worked as a Licensed Master Barber fo 25+
+                <p></p>I am coming from a totally non-technical background. I have worked as a Licensed Master Barber fo 25+
                 years. I must admit, I struggled quite a bit(still do at times), but I kept at it and I’m grateful to be
-                in Ga Tech Coding BootCamp.
+                in Ga Tech Coding BootCamp.</p>
 
                 I’m currently working as a Salesforce BA for a partner company. I currently hold 6 Salesforce
                 certifications. <strong> Platform App Builder, Platform Developer 1, Email Marketing Specialist, Email
