changed paragraphs on index.html

--- a/index.html
+++ b/index.html
@@ -60,16 +60,17 @@
               <p>Hello World! I’m originally from Brooklyn, New York but I have been in ATL sine 1995. I am a proud
                 father of 4 that loves sports, working out, and…of course…CODING!
 
-                <p></p>I am coming from a totally non-technical background. I have worked as a Licensed Master Barber fo 25+
+                <p>I am coming from a totally non-technical background. I have worked as a Licensed Master Barber fo 25+
                 years. I must admit, I struggled quite a bit(still do at times), but I kept at it and I’m grateful to be
                 in Ga Tech Coding BootCamp.</p>
 
-                I’m currently working as a Salesforce BA for a partner company. I currently hold 6 Salesforce
+                <p>I’m currently working as a Salesforce BA for a partner company. I currently hold 6 Salesforce
                 certifications. <strong> Platform App Builder, Platform Developer 1, Email Marketing Specialist, Email
-                  Marketing Consultant</strong>, and <strong>B2B Commerce Admin</strong>. I’m proud of the
+                  Marketing Consultant</strong>, and <strong>B2B Commerce Admin.</strong></p>I’m proud of the
                 accomplishments and it was a good introduction into the IT industry. However, I want to be a developer.
-
-                I believe I’m on the right track and I’m exited about what lies ahead!</p>
+                I believe I’m on the right track and I’m exited about what lies ahead!
+              
+              </p>
               </article>
             </div>
           </section>
@@ -78,12 +79,12 @@
       </div>
     </div>
 
-    </div>
+    
   </section>
   <div class="row" id="spacer"></div>
   <!-- Sticky Footer  -->
   <footer>
-  <div class="fixed-bottom" id="footer">
+  <div class="fixed-bottom" id="footer"></div>
     <p class="ftr-txt">Ga Tech Coding BootCamp Homework2</p> 
   </footer>
 
