--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="container">
       <div class="row" id="spacer"></div>
       <div class="row">
-        <div class="col-sm-4">
+        <div class="col-md-4">
           <section class="bio-box">
             <!-- Header  -->
             <h1>About Me</h1>
