--- a/contact.html
+++ b/contact.html
@@ -1,82 +1,143 @@
-  
 <!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<title>Contact Page</title>
+		<meta name="description" content="" />
+		<script
+			src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+			integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+			integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+			integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+			crossorigin="anonymous"
+		></script>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link
+			rel="stylesheet"
+			href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+			integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+			crossorigin="anonymous"
+		/>
+		<link rel="stylesheet" href="style.css" />
+	</head>
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Bootstrap Contact Page</title>
-    <meta name="description" content="">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-</head>
+	<body>
+		<!-- Navbar with 'Contacts' 'Index' and 'Portfolio' options -->
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<a
+				class="navbar-brand"
+				id="name"
+				href="https://fsgeoff.github.io/bootstrap-portfolio/"
+				>Geoff Nix</a
+			>
+			<button
+				class="navbar-toggler"
+				type="button"
+				data-toggle="collapse"
+				data-target="#navbarNav"
+				aria-controls="navbarNav"
+				aria-expanded="false"
+				aria-label="Toggle navigation"
+			>
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+					<li class="nav-item active">
+						<a
+							class="nav-link"
+							href="https://fsgeoff.github.io/bootstrap-portfolio/contact"
+							>Contact<span class="sr-only">(current)</span></a
+						>
+					</li>
+					<li class="nav-item">
+						<a
+							class="nav-link"
+							href="https://fsgeoff.github.io/bootstrap-portfolio/#"
+							>Index</a
+						>
+					</li>
+					<li class="nav-item">
+						<a
+							class="nav-link"
+							href="https://fsgeoff.github.io/bootstrap-portfolio/portfolio"
+							>Portfolio</a
+						>
+					</li>
+				</ul>
+			</div>
+		</nav>
 
-<body>
-  <!-- Navbar with 'Contacts' 'Index' and 'Portfolio' options -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" id="name" href="https://fsgeoff.github.io/bootstrap-portfolio/">Geoff Nix</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="https://fsgeoff.github.io/bootstrap-portfolio/contact">Contact<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://fsgeoff.github.io/bootstrap-portfolio/#">Index</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://fsgeoff.github.io/bootstrap-portfolio/portfolio">Portfolio</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+		<div class="container">
+			<div class="row" id="spacer"></div>
+			<div class="row">
+				<div class="col-md-6">
+					<section class="cnt-form">
+						<!-- Header to the Contact Form  -->
+						<form class="form-group">
+							<h1 class="contact-header">Contact</h1>
+							<hr />
+						</form>
 
-      <div class="container">
-        <div class="row" id="spacer"></div>
-          <div class="row">
-              <div class="col-md-6">
-                <section class="cnt-form">
-                <!-- Header to the Contact Form  -->
-              <form class="form-group"> <h1 class="contact-header">Contact</h1>
-                <hr>
-              </form>
-              
-                <form class="form-group" id="input-info">
-                    <div class="form-group">
-                      <!-- Input Box -->
-                        <label for="exampleInputEmail1">Name</label>
-                        <input type="name" class="form-control" id="exampleInputName" placeholder="Name" >
-                      </div>
-                    <div class="form-group">
-                      <!-- Input Box -->
-                        <label for="exampleInputEmail1">Email</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
-                      </div>
-                      <div class="form-group">
-                        <!-- Input Box -->
-                        <label for="message">Message:</label>
-                        <textarea class="form-control" rows="5" id="message"></textarea>
-                      </div> 
-                      <div class="form-group" >
-                        <!-- Submit Button  -->
-                        <button class="btn btn-primary btn-lg" type="submit">Submit</button>
-                      </div>
-                </form>
-              </section>
-              </div>
-          </div>
-      </div>
-      <div class="row" id="spacer"></div>
-      <!-- Sticky Footer  -->
-      <footer>
-  <div class="fixed-bottom" id="footer">
-    <p class="ftr-txt">Ga Tech Coding BootCamp Homework2</p>
-  </div> 
-      </footer>    
-</body>
+						<form class="form-group" id="input-info">
+							<div class="form-group">
+								<!-- Input Box -->
+								<label for="exampleInputEmail1">Name</label>
+								<input
+									type="name"
+									class="form-control"
+									id="exampleInputName"
+									placeholder="Name"
+								/>
+							</div>
+							<div class="form-group">
+								<!-- Input Box -->
+								<label for="exampleInputEmail1">Email</label>
+								<input
+									type="email"
+									class="form-control"
+									id="exampleInputEmail1"
+									placeholder="Email"
+								/>
+							</div>
+							<div class="form-group">
+								<!-- Input Box -->
+								<label for="message">Message:</label>
+								<textarea
+									class="form-control"
+									rows="5"
+									id="message"
+								></textarea>
+							</div>
+							<div class="form-group">
+								<!-- Submit Button  -->
+								<button
+									class="btn btn-primary btn-lg"
+									type="submit"
+								>
+									Submit
+								</button>
+							</div>
+						</form>
+					</section>
+				</div>
+			</div>
+		</div>
+		<div class="row" id="spacer"></div>
+		<!-- Sticky Footer  -->
+		<footer>
+			<div class="fixed-bottom" id="footer">
+				<p class="ftr-txt">Ga Tech Coding BootCamp Homework2</p>
+			</div>
+		</footer>
+	</body>
 </html>
