--- a/index.html
+++ b/index.html
@@ -1,94 +1,150 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Index Page</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <link rel="stylesheet" href="indexstyle.css">
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-    crossorigin="anonymous"></script>
-</head>
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<title>Index Page</title>
+		<meta name="description" content="" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link
+			rel="stylesheet"
+			href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+			integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+			crossorigin="anonymous"
+		/>
+		<link rel="stylesheet" href="indexstyle.css" />
+		<script
+			src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+			integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+			integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+			integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+			crossorigin="anonymous"
+		></script>
+	</head>
 
-<body>
-  <!-- Navbar with 'Contacts' 'Index' and 'Portfolio' options -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" id="self" href="https://fsgeoff.github.io/bootstrap-portfolio/">Geoff Nix</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="https://fsgeoff.github.io/bootstrap-portfolio/contact">Contact<span
-              class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://fsgeoff.github.io/bootstrap-portfolio/#">Index</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://fsgeoff.github.io/bootstrap-portfolio/portfolio">Portfolio</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <section class="bio-box">
-    <div class="container">
-      <div class="row" id="spacer"></div>
-      <div class="row">
-        <div class="col-md-4">
-          <section class="bio-box">
-            <!-- Header  -->
-            <h1>About Me</h1>
-            <hr>
-            <!-- Image of self  -->
-            <img src="images/self.jpeg" alt="Geoff Nix Pic" class="img-responsive" id="index-pic">
-            <div class="text-wrap">
-              <!-- Bio Text  -->
-              <article class="self-bio">
-              <p>Hello World! I’m originally from Brooklyn, New York but I have been in ATL sine 1995. I am a proud
-                father of 4 that loves sports, working out, and…of course…CODING!
+	<body>
+		<!-- Navbar with 'Contacts' 'Index' and 'Portfolio' options -->
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<a
+				class="navbar-brand"
+				id="self"
+				href="https://fsgeoff.github.io/bootstrap-portfolio/"
+				>Geoff Nix</a
+			>
+			<button
+				class="navbar-toggler"
+				type="button"
+				data-toggle="collapse"
+				data-target="#navbarNav"
+				aria-controls="navbarNav"
+				aria-expanded="false"
+				aria-label="Toggle navigation"
+			>
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+					<li class="nav-item active">
+						<a
+							class="nav-link"
+							href="https://fsgeoff.github.io/bootstrap-portfolio/contact"
+							>Contact<span class="sr-only">(current)</span></a
+						>
+					</li>
+					<li class="nav-item">
+						<a
+							class="nav-link"
+							href="https://fsgeoff.github.io/bootstrap-portfolio/#"
+							>Index</a
+						>
+					</li>
+					<li class="nav-item">
+						<a
+							class="nav-link"
+							href="https://fsgeoff.github.io/bootstrap-portfolio/portfolio"
+							>Portfolio</a
+						>
+					</li>
+				</ul>
+			</div>
+		</nav>
+		<section class="bio-box">
+			<div class="container">
+				<div class="row" id="spacer"></div>
+				<div class="row">
+					<div class="col-md-4">
+						<section class="bio-box">
+							<!-- Header  -->
+							<h1>About Me</h1>
+							<hr />
+							<!-- Image of self  -->
+							<img
+								src="images/self.jpeg"
+								alt="Geoff Nix Pic"
+								class="img-responsive"
+								id="index-pic"
+							/>
+							<div class="text-wrap">
+								<!-- Bio Text  -->
+								<article class="self-bio">
+									<p>
+										Hello World! I’m originally from
+										Brooklyn, New York but I have been in
+										ATL sine 1995. I am a proud father of 4
+										that loves sports, working out, and…of
+										course…CODING!
+									</p>
 
-                <p>I am coming from a totally non-technical background. I have worked as a Licensed Master Barber fo 25+
-                years. I must admit, I struggled quite a bit(still do at times), but I kept at it and I’m grateful to be
-                in Ga Tech Coding BootCamp.</p>
+									<p>
+										I am coming from a totally non-technical
+										background. I have worked as a Licensed
+										Master Barber fo 25+ years. I must
+										admit, I struggled quite a bit(still do
+										at times), but I kept at it and I’m
+										grateful to be in Ga Tech Coding
+										BootCamp.
+									</p>
 
-                <p>I’m currently working as a Salesforce BA for a partner company. I currently hold 6 Salesforce
-                certifications. <strong> Platform App Builder, Platform Developer 1, Email Marketing Specialist, Email
-                  Marketing Consultant</strong>, and <strong>B2B Commerce Admin.</strong></p>I’m proud of the
-                accomplishments and it was a good introduction into the IT industry. However, I want to be a developer.
-                I believe I’m on the right track and I’m exited about what lies ahead!
-              
-              </p>
-              </article>
-            </div>
-          </section>
-        </div>
-
-      </div>
-    </div>
-
-    
-  </section>
-  <div class="row" id="spacer"></div>
-  <!-- Sticky Footer  -->
-  <footer>
-  <div class="fixed-bottom" id="footer"></div>
-    <p class="ftr-txt">Ga Tech Coding BootCamp Homework2</p> 
-  </footer>
-
-
-</body>
-
+									<p>
+										I’m currently working as a Salesforce BA
+										for a partner company. I currently hold
+										6 Salesforce certifications.
+										<strong>
+											Platform App Builder, Platform
+											Developer 1, Email Marketing
+											Specialist, Email Marketing
+											Consultant</strong
+										>, and
+										<strong>B2B Commerce Admin.</strong>
+									</p>
+									<p>
+										I’m proud of the accomplishments and it
+										was a good introduction into the IT
+										industry. However, I want to be a
+										developer. I believe I’m on the right
+										track and I’m exited about what lies
+										ahead!
+									</p>
+								</article>
+							</div>
+						</section>
+					</div>
+				</div>
+			</div>
+		</section>
+		<div class="row" id="spacer"></div>
+		<!-- Sticky Footer  -->
+		<footer>
+			<div class="fixed-bottom" id="footer"></div>
+			<p class="ftr-txt">Ga Tech Coding BootCamp Homework2</p>
+		</footer>
+	</body>
 </html>
