--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 										6 Salesforce certifications.
 										<strong>
 											Platform App Builder, Platform
-											Developer 1, Email Marketing
+											Developer I, Email Marketing
 											Specialist, Email Marketing
 											Consultant</strong
 										>, and
