--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
 									<p>
 										Hello World! I’m originally from
 										Brooklyn, New York but I have been in
-										ATL since 1995. I am a proud father of 4
-										that loves sports, working out, and…of
-										course…CODING!
+										Atlanta since 1995. I am a proud father
+										of 4 that loves sports, working out,
+										and…of course…CODING!
 									</p>
 
 									<p>
