corrected Salesforce info

--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
 										for a partner company. I currently hold
 										6 Salesforce certifications.
 										<strong>
-											Platform App Builder, Platform
-											Developer I, Email Marketing
-											Specialist, Email Marketing
-											Consultant</strong
+											Administrator, Platform App Builder,
+											Platform Developer I, Email
+											Marketing Specialist, Email
+											Marketing Consultant</strong
 										>, and
 										<strong>B2B Commerce Admin.</strong>
 									</p>
