added links to portfolio

--- a/index.html
+++ b/index.html
@@ -102,27 +102,67 @@
 									Ga Tech Coding BootCamp. I’m currently
 									working as a Salesforce BA for a partner
 									company. I currently hold 6 Salesforce
-									certifications.
-									<strong>
-										Platform App Builder, Platform Developer
-										1, Email Marketing Specialist, Email
-										Marketing Consultant</strong
-									>, and <strong>B2B Commerce Admin</strong>.
-									I’m proud of the accomplishments and it was
-									a good introduction into the IT industry.
-									However, I want to be a developer. I believe
-									I’m on the right track and I’m exited about
-									what lies ahead!
+									certifications. I’m proud of the
+									accomplishments and it was a good
+									introduction into the IT industry. However,
+									I want to be a developer. I believe I’m on
+									the right track and I’m exited about what
+									lies ahead!
 								</p>
 								<p>
 									Ga Tech Coding Bootcamp is serious! The pace
 									of the class is very fast and we are
 									constantly being exposed to new concepts. So
-									far we have covered HTMl, CSS, Javascript,
+									far we have covered HTML, CSS, Javascript,
 									Jquery, APIs, and Node.js; all in under 3
 									months. It's tough, it's time consuming, and
 									it can be nerve-racking...and...I love it!
+									Can't wait to learn more.
 								</p>
+							</div>
+						</section>
+					</div>
+					<div class="col-md-5">
+						<section>
+							<div class="hwk-box">
+								<h3 class="links-hdr">Coding Assignments</h3>
+								<hr />
+								<nav class="nix-links">
+									<p id="anchor-3">
+										<a
+											href="https://github.com/FSGeoff/jquery-calendar.git"
+											,
+											target="_blank"
+											,
+											alt="JQuery Calendar"
+											>JQuery Calendar</a
+										>-My first homework involving the use of
+										JQuery.
+									</p>
+									<p id="anchor-2">
+										<a
+											href="https://github.com/FSGeoff/weather-dashboard.git"
+											,
+											target="_blank"
+											,
+											alt="Weather DashBoard"
+											>Weather Dashboard</a
+										>-My first assignment in which I
+										utilized API's.
+									</p>
+									<p id="anchor-3">
+										<a
+											href="https://github.com/FSGeoff/What-da-ya-have.git"
+											,
+											target="_blank"
+											,
+											alt="Project-1"
+											>Project 1</a
+										>-My very first group project. Learned
+										to work well with others while being
+										productive.
+									</p>
+								</nav>
 							</div>
 						</section>
 					</div>
