--- a/index.html
+++ b/index.html
@@ -137,7 +137,14 @@
 											alt="JQuery Calendar"
 											>JQuery Calendar</a
 										>-My first homework involving the use of
-										JQuery.
+										JQuery.....<a
+											href="https://github.com/FSGeoff/jquery-calendar.git"
+											,
+											target="_blank"
+											,
+											alt="JQery-github"
+											>GitHub Repo</a
+										>
 									</p>
 									<p id="anchor-2">
 										<a
@@ -148,7 +155,14 @@
 											alt="Weather DashBoard"
 											>Weather Dashboard</a
 										>-My first assignment in which I
-										utilized API's.
+										utilized API's.....<a
+											href="https://github.com/FSGeoff/weather-dashboard.git"
+											,
+											target="_blank"
+											,
+											alt="weather-github"
+											>GitHub Repo</a
+										>
 									</p>
 									<p id="anchor-3">
 										<a
@@ -158,9 +172,17 @@
 											,
 											alt="Project-1"
 											>Project 1</a
-										>-My very first group project. Learned
-										to work well with others while being
-										productive.
+										>
+										My very first group project. Learned to
+										work well with others while being
+										productive.....<a
+											href="https://github.com/FSGeoff/What-da-ya-have.git"
+											,
+											target="_blank"
+											,
+											alt="P1-github"
+											>GtiHub Repo</a
+										>
 									</p>
 								</nav>
 							</div>
