added screenshots, added contact info

--- a/contact.html
+++ b/contact.html
@@ -77,67 +77,27 @@
 			</div>
 		</nav>
 
+		<div class="row" id="spacer"></div>
 		<div class="container">
-			<div class="row" id="spacer"></div>
 			<div class="row">
-				<div class="col-md-6">
-					<section class="cnt-form">
-						<!-- Header to the Contact Form  -->
-						<form class="form-group">
-							<h1 class="contact-header">Contact</h1>
-							<hr />
-						</form>
-
-						<form class="form-group" id="input-info">
-							<div class="form-group">
-								<!-- Input Box -->
-								<label for="exampleInputEmail1">Name</label>
-								<input
-									type="name"
-									class="form-control"
-									id="exampleInputName"
-									placeholder="Name"
-								/>
-							</div>
-							<div class="form-group">
-								<!-- Input Box -->
-								<label for="exampleInputEmail1">Email</label>
-								<input
-									type="email"
-									class="form-control"
-									id="exampleInputEmail1"
-									placeholder="Email"
-								/>
-							</div>
-							<div class="form-group">
-								<!-- Input Box -->
-								<label for="message">Message:</label>
-								<textarea
-									class="form-control"
-									rows="5"
-									id="message"
-								></textarea>
-							</div>
-							<div class="form-group">
-								<!-- Submit Button  -->
-								<button
-									class="btn btn-primary btn-lg"
-									type="submit"
-								>
-									Submit
-								</button>
-							</div>
-						</form>
-					</section>
+				<div class="col-md-6" id="bio-text">
+					<h2>Geoffrey Nix</h2>
+					<h4>(347)727-1956</h4>
+					<h4>FullStackGeoff@gmail.com</h4>
+					<a
+						href="https://github.com/FSGeoff"
+						aria-label="github link"
+						>GitHub Profile</a
+					>
+					<p>
+						<a
+							href="https://www.linkedin.com/in/geoff-nix-070512178/"
+							aria-label="github link"
+							>LinkedIn Profile</a
+						>
+					</p>
 				</div>
 			</div>
 		</div>
-		<div class="row" id="spacer"></div>
-		<!-- Sticky Footer  -->
-		<footer>
-			<div class="fixed-bottom" id="footer">
-				<p class="ftr-txt">Ga Tech Coding BootCamp Homework2</p>
-			</div>
-		</footer>
 	</body>
 </html>
