--- a/portfolio.html
+++ b/portfolio.html
@@ -89,42 +89,42 @@
 						</form>
 						<form class="form-group" id="nix-pics">
 							<img
-								src="images/baby.jpeg"
-								alt="Baby Pic"
+								src="images/jQuery1.png"
+								alt="JQuery Screenshot"
 								class="img-responsive"
 								id="port-img"
 							/>
 							<img
-								src="images/wcc.jpeg"
-								alt="Selfie at WCC"
-								class="img-responsive"
-								id="port-img"
-							/>
-						</form>
-						<form class="form-group" id="nix-pics">
-							<img
-								src="images/chops.jpeg"
-								alt="Pork-chop sideburns pic"
-								class="img-responsive"
-								id="port-img"
-							/>
-							<img
-								src="images/hawaii.jpeg"
-								alt="Hawaii pic"
+								src="images/jQuery2.png"
+								alt="jQuery Screenshot"
 								class="img-responsive"
 								id="port-img"
 							/>
 						</form>
 						<form class="form-group" id="nix-pics">
 							<img
-								src="images/construction.jpeg"
-								alt="Black/White selfie"
+								src="images/weatherDash1.png"
+								alt="WeatherDash1 Screenshot"
 								class="img-responsive"
 								id="port-img"
 							/>
 							<img
-								src="images/kids.jpeg"
-								alt="Black/White selfie"
+								src="images/weatherDash2.png"
+								alt="WeatherDash2 Screenshot"
+								class="img-responsive"
+								id="port-img"
+							/>
+						</form>
+						<form class="form-group" id="nix-pics">
+							<img
+								src="images/projectShot1.png"
+								alt="Project 1 Screenshot1"
+								class="img-responsive"
+								id="port-img"
+							/>
+							<img
+								src="images/projectShot2.png"
+								alt="Project1 Screenshot 2"
 								class="img-responsive"
 								id="port-img"
 							/>
