--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							<h1>About Me</h1>
 							<hr />
 							<img
-								src="images/self.jpeg"
+								src="images/blk-n-wht.jpeg"
 								alt="Geoff Nix Pic"
 								class="img-responsive"
 								id="index-pic"
