--- a/portfolio.html
+++ b/portfolio.html
@@ -88,6 +88,7 @@
 							<hr />
 						</form>
 						<form class="form-group" id="nix-pics">
+							<div>Jquery Calendar Assignment</div>
 							<img
 								src="images/jQuery1.png"
 								alt="JQuery Screenshot"
@@ -102,6 +103,7 @@
 							/>
 						</form>
 						<form class="form-group" id="nix-pics">
+							<div>Weather DashBoard Assignment</div>
 							<img
 								src="images/weatherDash1.png"
 								alt="WeatherDash1 Screenshot"
@@ -116,6 +118,7 @@
 							/>
 						</form>
 						<form class="form-group" id="nix-pics">
+							<div>Group Project 1</div>
 							<img
 								src="images/projectShot1.png"
 								alt="Project 1 Screenshot1"
