made kinks open in new tab

--- a/contact.html
+++ b/contact.html
@@ -86,12 +86,14 @@
 					<h4>FullStackGeoff@gmail.com</h4>
 					<a
 						href="https://github.com/FSGeoff"
+						target="_blank"
 						aria-label="github link"
 						>GitHub Profile</a
 					>
 					<p>
 						<a
 							href="https://www.linkedin.com/in/geoff-nix-070512178/"
+							target="_blank"
 							aria-label="github link"
 							>LinkedIn Profile</a
 						>
