--- a/portfolio.html
+++ b/portfolio.html
@@ -88,7 +88,30 @@
 							<hr />
 						</form>
 						<form class="form-group" id="nix-pics">
-							<div>Jquery Calendar Assignment</div>
+							<div>
+								Jquery Calendar Assignment: My first assignment
+								involving the use of JQuery
+								<p id="anchor-3">
+									<a
+										href="https://fsgeoff.github.io/jquery-calendar/"
+										,
+										target="_blank"
+										,
+										alt="JQuery Calendar"
+										>Url</a
+									>
+								</p>
+								<p>
+									<a
+										href="https://github.com/FSGeoff/jquery-calendar.git"
+										,
+										target="_blank"
+										,
+										alt="JQery-github"
+										>GitHub Repo</a
+									>
+								</p>
+							</div>
 							<img
 								src="images/jQuery1.png"
 								alt="JQuery Screenshot"
@@ -103,7 +126,31 @@
 							/>
 						</form>
 						<form class="form-group" id="nix-pics">
-							<div>Weather DashBoard Assignment</div>
+							<hr />
+							<div>
+								Weather DashBoard Assignment: My first
+								assignment in which I utilized API's
+								<p id="anchor-3">
+									<a
+										href="https://fsgeoff.github.io/weather-dashboard/"
+										,
+										target="_blank"
+										,
+										alt="JQuery Calendar"
+										>Url</a
+									>
+								</p>
+								<p>
+									<a
+										href="https://github.com/FSGeoff/weather-dashboard.git"
+										,
+										target="_blank"
+										,
+										alt="JQery-github"
+										>GitHub Repo</a
+									>
+								</p>
+							</div>
 							<img
 								src="images/weatherDash1.png"
 								alt="WeatherDash1 Screenshot"
@@ -118,7 +165,30 @@
 							/>
 						</form>
 						<form class="form-group" id="nix-pics">
-							<div>Group Project 1</div>
+							<hr />
+							<div>
+								Group Project 1
+								<p id="anchor-3">
+									<a
+										href="https://fsgeoff.github.io/What-da-ya-have/"
+										,
+										target="_blank"
+										,
+										alt="JQuery Calendar"
+										>Url</a
+									>
+								</p>
+								<p>
+									<a
+										href="https://github.com/FSGeoff/What-da-ya-have.git"
+										,
+										target="_blank"
+										,
+										alt="JQery-github"
+										>GitHub Repo</a
+									>
+								</p>
+							</div>
 							<img
 								src="images/projectShot1.png"
 								alt="Project 1 Screenshot1"
@@ -138,12 +208,5 @@
 		</div>
 		<!-- Space between content and footer  -->
 		<div class="row" id="spacer"></div>
-
-		<!-- Sticky Footer  -->
-		<footer>
-			<div class="fixed-bottom" id="footer">
-				<p class="ftr-txt">Ga Tech Coding BootCamp Homework2</p>
-			</div>
-		</footer>
 	</body>
 </html>
