--- a/contact.html
+++ b/contact.html
@@ -90,14 +90,20 @@
 						aria-label="github link"
 						>GitHub Profile</a
 					>
-					<p>
-						<a
-							href="https://www.linkedin.com/in/geoff-nix-070512178/"
-							target="_blank"
-							aria-label="github link"
-							>LinkedIn Profile</a
-						>
-					</p>
+					\
+					<a
+						href="https://www.linkedin.com/in/geoff-nix-070512178/"
+						target="_blank"
+						aria-label="github link"
+						>LinkedIn Profile</a
+					>
+					\
+					<a
+						href="https://l.linklyhq.com/l/8yeZ"
+						target="_blank"
+						aria-label="resume"
+						>Resume</a
+					>
 				</div>
 			</div>
 		</div>
